Fix Overflow Issues

--- a/04-admin-foodfy/public/css/styles.css
+++ b/04-admin-foodfy/public/css/styles.css
@@ -23,6 +23,7 @@ body {
     height: 100vh;
     font-family: 'Roboto', sans-serif;
     color: var(--default-black);
+    overflow-y: overlay
 }
 
 .container {
